[package]
name = "ks89-register"
version = "1.2.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "register"
path = "src/main.rs"

[lib]
name = "register"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
rocket = { version = "0.5.1", features = ["uuid", "secrets", "json"] }
mongodb = "^3.2.3"
log = "^0.4.27"
log4rs = { version = "^1.3.0", features = ["console_appender", "rolling_file_appender"] }
dotenvy = "^0.15.7"
envy = "^0.4.2"
futures = "^0.3.31"

# To use Serialize and Deserialize traits, you must include Serde.
# The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"

[dev-dependencies]
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.9.1"
# better looking rust assertions
pretty_assertions = "^1.4.1"
# include also serde_json with the feature 'preserve_order' to don't change the order of keys
# 'preserve_order' is required to compare results in a predictible way in testing
serde_json = { version = "^1.0.140", features = ["preserve_order"] }
