[package]
name = "ks89-register"
version = "1.2.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "register"
path = "src/main.rs"

[lib]
name = "register"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
rocket = { version = "0.5.1", features = ["uuid", "secrets", "json"] }
mongodb = "^3.3.0"
tracing = "^0.1.41"
tracing-appender = "^0.2.3"
tracing-subscriber = { version = "^0.3.20", features = ["env-filter"] }
dotenvy = "^0.15.7"
envy = "^0.4.2"
futures = "^0.3.31"

# To use Serialize and Deserialize traits, you must include Serde.
# The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "^1.0.225", features = ["derive"] }
serde_json = "^1.0.145"

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.9.2"
# better looking rust assertions
pretty_assertions = "^1.4.1"
# include also serde_json with the feature 'preserve_order' to don't change the order of keys
# 'preserve_order' is required to compare results in a predictible way in testing
serde_json = { version = "^1.0.145", features = ["preserve_order"] }
test-log = {version = "0.2.18", features = ["trace"]}